--- a/customerHomepage.css
+++ b/customerHomepage.css
@@ -217,9 +217,20 @@ margin-top: 10px;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
+    z-index: 3
  }
 
  #background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit:fill;
+    z-index: -1;
+}
+
+#background-video-2 {
     position: absolute;
     top: 0;
     left: 0;
@@ -233,28 +244,10 @@ margin-top: 10px;
 .section-one-slider {
     overflow-y: auto;
     width: 100%;
-}
-/* 
-.section-one-slider::-webkit-scrollbar {
-    width: 12px; 
-}
-
-.section-one-slider::-webkit-scrollbar {
-    width: 12px;
-}
-
-.section-one-slider::-webkit-scrollbar-track {
-    background: #D9D9D91A;
-    backdrop-filter: blur(5px);
-    border-radius: 10px;
-    border: 2px solid #fff;
+    z-index: 3;
+    position: relative;
 
 }
-
-.section-one-slider::-webkit-scrollbar-thumb {
-    background: #D9D9D9;
-    border-radius: 10px;
-} */
 
 .slide {
     height: 700px;
@@ -274,6 +267,8 @@ margin-top: 10px;
     padding: 15px 25px;
     background-color: #66666814;
     backdrop-filter: blur(2px);
+    z-index: 3;
+    position: relative;
 }
 
 .section-one-bottom-outer {
@@ -282,6 +277,8 @@ margin-top: 10px;
     bottom: 90px;
     margin-left: auto;
     margin-right: auto;
+    z-index: 3;
+    position: relative;
 
 }
 
@@ -311,6 +308,7 @@ margin-top: 10px;
     top: -50px;
     padding-top: 10px;
     padding-bottom: 90px;
+    z-index: 10;
 }
 
 .section-two-nav {
