--- a/customerHomepage.css
+++ b/customerHomepage.css
@@ -324,7 +324,7 @@ margin-top: 10px;
 
 .section-two-nav .nav-button {
     position: absolute;
-    right: 20px;
+    right: 8px;
     top: 50%;
     transform: translateY(-50%);
     background-color: #041A40;
@@ -332,13 +332,13 @@ margin-top: 10px;
     border-radius: 50%;
     padding: 4px 7px 5px 7px;;
     cursor: pointer;
-    z-index: 10;
+    z-index: 20;
     box-shadow: 0 4px 4px 0 #00000015;
 }
 
 .section-two-nav .nav-prev-button {
     position: absolute;
-    left: 20px;
+    left: 8px;
     top: 50%;
     transform: translateY(-50%);
     background-color: #041A40;
@@ -369,7 +369,8 @@ margin-top: 10px;
     align-items: center;
     justify-content: space-between;
     white-space: nowrap;
-    flex-wrap:nowrap
+    flex-wrap:nowrap;
+    padding-left: 0;
 }
 
 .section-two-nav li {
@@ -378,10 +379,6 @@ margin-top: 10px;
     border-radius: 20px;
     margin: 10px;
     white-space: nowrap;
-}
-
-.section-two-nav li:first-child {
-    margin-left: 20px;
 }
 
 .section-two-nav li:hover, .section-two-nav li.active {
@@ -801,11 +798,15 @@ display: block;
     align-items: center
 }
 
+.arrow.hidden {
+    display: none;
+}
+
 .tablet-header .users .user-img {
     margin-left: -7px;
 }
 
-.tablet-header .users .realezi-arrow {
+.tablet-header .users .arrow-pair {
     margin-left: 15px;
 }
 
@@ -1218,30 +1219,20 @@ opacity: 1;
   /* Section seven */
 
   .section-seven {
-    padding: 2% 0;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
-    height: 100vh;
+    height: 140vh;
     width: 100%;
-    margin-bottom: 50px;
     background: #100F3F;
     position: relative;
   }
 
-  .section-seven .section-seven-inner.fixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 5;
-  }
   .section-seven h2, .section-seven .description {
     color: #fff !important;
   }
 
   .section-seven .section-seven-inner {
     height: 100vh;
-    width: 100%;
     background: #100F3F;
     display: flex;
     align-items: center;
@@ -1250,41 +1241,31 @@ opacity: 1;
     transition: opacity 0.5s ease;
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px; 
+    position: sticky;
+    top: 0; 
+    width: 100%;
+    padding: 20px;
+    z-index: 1;
   }
 
   .button-container {
     background: #4C4C6B45;
     box-shadow: 0px 4px 4px 0px #00000059;
-width: 650px;
-height: 100px;
-border-radius: 10px;
-z-index: 10;
-display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: column;
-    overflow: hidden;
+    width: 650px;
+    height: 100px;
+    border-radius: 10px;
     padding-top: 20px;
+    position: relative;
+    overflow: hidden; 
   }
 
   .text-scroller {
     font-size: 2.4rem;
     color: #fff;
-    opacity: 0;
-    transform: translateY(70%);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
     position: absolute;
+    width: 100%;
+    text-align: center;
   }
-
-  .text-scroller.active {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.text-scroller.exit {
-    opacity: 0;
-    transform: translateY(-70%);
-}
 
 
 /* Section Eight */
@@ -1551,6 +1532,12 @@ box-shadow: none;
 }
 
 @media screen and (max-width:767px) {
+    .section-one-bottom-outer {
+        bottom: 70px;
+    }
+    .section-one-bottom {
+        padding: 5px 20px 0 20px
+    }
     .section-one-container {
         height: 500px;
     }
@@ -1621,6 +1608,9 @@ margin-left: 20px;
     .nav .upper-nav .d-flex {
         justify-content: space-between !important;
     }
+    .section-one-bottom p, .section-one-bottom button {
+        font-size: 0.85rem;
+    }
     .tablet-border-inner {
         padding-right: 10px;
     }
@@ -1681,6 +1671,9 @@ margin-left: 20px;
     .section-two-nav ul {
         overflow-x: auto;
         width: 85%;
+    }
+    .section-two-nav li:first-child {
+        margin-left: 40px;
     }
 }
 
