Added animation to footer links

--- a/customerHomepage.css
+++ b/customerHomepage.css
@@ -1131,7 +1131,7 @@ filter: blur(50px)
 
 
 @keyframes slideInLeft {
-    0% { transform: translateX(100%);
+    0% { transform: translateX(200%);
         opacity: 1; }
     100% { transform: translateX(0);
         opacity: 1; }
@@ -1554,9 +1554,41 @@ opacity: 1;
     color: #111F3C;
 }
 
-.footer li:hover {
+.footer li {
+    position: relative;
+    width: max-content;
+}
+
+.upper-footer li::before {
+    content: '';
+    width: 0;
+    height: 2px;
+    border-radius: 2px;
+    background-color: #EC7100;
+    position: absolute;
+    bottom: -3px;
+    left: 50%;
+    transition: width .4s, left .4s;
+  }
+ 
+ .upper-footer li:hover {
+     cursor: pointer;
+     color: #EC7100;
+ }
+
+ .upper-footer li:hover::before {
+    width: 100%;
+    left: 0;
+  }
+
+.upper-footer li:hover {
     color: #EC7100;
     cursor: pointer;
+}
+
+.lower-footer li:hover {
+    cursor: pointer;
+    color: #EC7100;
 }
 
 .footer .upper-footer li{
