--- a/customerHomepage.css
+++ b/customerHomepage.css
@@ -268,7 +268,7 @@ text-align: left;
  .section-one-container {
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 93vh;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -754,6 +754,8 @@ top: -14px;
     margin: 10px 20px;
     box-shadow: 5px 4px 11px 0 #00000015;
     border-radius: 20px;
+    width: 120px;
+    height: 100px;
   }
 
   .properties-categories canvas.hidden {
@@ -1623,8 +1625,9 @@ white-space: nowrap;
 
 .footer .blue-btn canvas {
     position: absolute;
-    right: -2px;;
-    bottom: 2px;
+    right: -18px;
+    bottom: 5px;
+    width: 70px;
 }
 
 .footer .playStore-btn {
@@ -1885,7 +1888,13 @@ text-align: center;
         .footer .upper-footer p {
             margin-right: 10px !important;
         }
-    }
+}
+
+@media screen and (max-width:900px) {
+        .section-one-container {
+            height: 700px;
+        }
+}
 
     @media screen and (max-width: 866px) {
 .search-container  {
