--- a/customerHomepage.css
+++ b/customerHomepage.css
@@ -147,6 +147,10 @@ button {
     padding: 15px;
     width: 100%;
  }
+
+ .upper-nav-ham-options li:hover {
+    color: #EC7100;
+ }
  
  .lower-nav {
      width: 100%;
@@ -241,7 +245,7 @@ margin-top: 10px;
  }
  
  .mobile-nav li:hover {
-     color: #111F3C !important;
+     color: #EC7100 !important;
  }
 
  /* Section One */
