Fixed mobile nav issue

--- a/customerHomepage.css
+++ b/customerHomepage.css
@@ -361,7 +361,7 @@ margin-top: 10px;
  
  .mobile-nav {
      position: absolute;
-     right: -500px;
+     right: -100%;
      top: 105px;
      width: 100%;
      background-color: #ffffff25;
@@ -382,6 +382,7 @@ margin-top: 10px;
      top: 100px;
      right: 0px;
  }
+
  .mobile-nav img {
      margin-bottom: 15px;
  }
@@ -2278,18 +2279,18 @@ margin-left: 20px;
 
 
 @media screen and (max-width: 770px) {
-      .footer .upper-footer .d-flex:first-child{
+    .footer .upper-footer .d-flex:first-child{
         flex-wrap: wrap;
-            }
-            .footer .upper-footer h4 {
-                margin-top: 20px;
-            }
-            .footer .lower-footer .lower-upper {
-                flex-direction: column
-            }
-            .footer .lower-footer .lower-upper ul {
-                margin: 15px 0 !important;
-            }
+      }
+    .footer .upper-footer h4 {
+        margin-top: 20px;
+    }
+    .footer .lower-footer .lower-upper {
+        flex-direction: column
+    }
+    .footer .lower-footer .lower-upper ul {
+         margin: 15px 0 !important;
+    }
 }
 
 @media screen and (max-width: 688px) {
@@ -2337,6 +2338,10 @@ margin-left: 20px;
 
 @media screen and (min-width: 577px) {
     .upper-nav-ham-menu {
+        display: none;
+    }
+
+    .toggle, .toggle2 {
         display: none;
     }
 }
