Removed two links from footer, added anchor tag in some places, compressed videos

--- a/customerHomepage.css
+++ b/customerHomepage.css
@@ -27,6 +27,11 @@ p {
   padding: 0;
 }
 
+a {
+  color: unset;
+  text-decoration: none !important;
+}
+
 input:focus,
 select:focus {
   outline: none;
@@ -866,7 +871,7 @@ body::-webkit-scrollbar {
   overflow: hidden;
   border-right: 2px solid;
   width: max-content;
-  height: 55px;
+  height: 50px;
 }
 
 @keyframes blink {
@@ -3441,6 +3446,9 @@ input[type="range"]::-webkit-slider-thumb {
   }
   .lower-nav .container {
     width: 97%;
+  }
+  #typewriter-text {
+    height: 40px;
   }
   .section-three h2 {
     font-size: 1.6rem !important;
